# summer_haystac_jia

./: daily_animation_jia.py  daily_animation_jia_newformat_trail2.py  daily_animation_jia_oldformat_trail2.py  feature_histogram.py  gen_lightgbm_feature.py  lightgbm_feature_importance_tianhao.py  lightgbm_jia.py  pr_plot.py  run.sh  test.ipynb  test.py  test_daily_animation_jia.ipynb
lightgbm_feature_importance/fix_Baseline_TA1_Trial_Train_Submission/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/fix_Kitware_TA1_Trial_1_Train_Submission/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/fix_L3Harris_TA1_Trial_Train_Submission/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/fix_Novateur_TA1_Trial_Train_Submission/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/losangeles_wo_std/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/losangeles_wo_std_10000/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/sanfrancisco_wo_std/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/singapore_wo_std/: metrics.json  model.lgb  params.json
lightgbm_feature_importance/singapore_wo_std_10000/: metrics.json  model.lgb  params.json
preprocess_data_generation/: FastKNN.py  FastLOF.py  FastLocalOutlierFactor.py  data_gen.py  data_gen_preprocess.py  feng_preprocess_detection.py  fengutils.py
preprocess_data_generation/discrete_frechet/: requirements.txt
preprocess_data_generation/haystac_kw/utils/data_utils/h3/src/: CMakeLists.txt  h3_convert.c
(+108 files in other folders)
